--- a/db/families.yaml
+++ b/db/families.yaml
@@ -334,6 +334,26 @@ families:
       generation: 4
     - person: simon-keswick
       generation: 4
+  kuhne:
+    origin: Germany
+    founder: august-kuhne
+    sector: logistics
+    generations: 3
+    status: active
+    note: 'Logistics dynasty. Nazi era: expelled Jewish partner, M-Aktion monopoly. Klaus-Michael is last of line (no heirs).'
+    members:
+    - person: klaus-michael-kuhne
+      generation: 3
+      role: patriarch
+    - person: august-kuhne
+      generation: 1
+      role: founder
+    - person: alfred-kuhne
+      generation: 2
+      role: patriarch
+    - person: werner-kuhne
+      generation: 2
+      role: partner
   lauder:
     origin: USA
     founder: Estée Lauder
@@ -390,6 +410,12 @@ families:
     - person: li-hongyi
       generation: 3
       role: member
+  luksic:
+    origin: CHL
+    founder: Andrónico Luksic Abaroa
+    sector: mining, banking, shipping
+    status: active
+    note: Richest family in South America. Croatian origins.
   marinho:
     origin: Brazil
     founder: irineu-marinho
